added slack orbs to circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,15 @@
+orbs:
+  slack: circleci/slack@3.4.2
 version: 2.1
 executors:
   app-executor:
     docker:
       - image: circleci/node:12.16.1
     working_directory: ~/repo
+  slack-executor:
+    docker:
+      - image: 'cibuild/base:latest'
+    resource_class: small
 
 aliases:
   - &show-current-branch-name
